# utils

./: .Makefile  .gitignore  Makefile  Makefile.am  README.md  autogen  configure.ac  dictionary  indent
include/: utils.h
src/: utils.h  utils_atoi.c  utils_boolean.c  utils_bzero.c  utils_floor.c  utils_isprime.c  utils_isspace.c  utils_isxdigit.c  utils_itoa.c  utils_math.c  utils_memcpy.c  utils_memory.c  utils_memset.c  utils_putchar.c  utils_putnbr.c  utils_putstr.c  utils_standard.c  utils_strcat.c  utils_strchr.c  utils_strcmp.c  utils_strcpy.c  utils_strdup.c  utils_stream.c  utils_string.c  utils_strlen.c  utils_strncat.c  utils_strncmp.c  utils_strncpy.c  utils_strndup.c  utils_strnlen.c  utils_strnstr.c  utils_strrchr.c  utils_strstr.c  utils_swapn.c  utils_vaput.c
tests/: Makefile  README.md
